Shyne like a diamond

--- a/Deteccion_de_ropa/templates/index.html
+++ b/Deteccion_de_ropa/templates/index.html
@@ -960,7 +960,7 @@
         <li class="nav-item">
           <a class="nav-link active" data-view="smart-mirror">
             <i class="nav-icon fas fa-magic"></i>
-            <span>Espejo Inteligente</span>
+            <span>SmartOutfit</span>
           </a>
         </li>
         <li class="nav-item">
@@ -976,7 +976,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" data-view="calendar">
+          <a class="nav-link" href="/agenda-view">
             <i class="nav-icon fas fa-calendar-alt"></i>
             <span>Agenda de Looks</span>
           </a>
