--- a/Deteccion_de_ropa/templates/index.html
+++ b/Deteccion_de_ropa/templates/index.html
@@ -970,7 +970,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" data-view="outfits">
+          <a class="nav-link" href="/combinaciones-view">
             <i class="nav-icon fas fa-palette"></i>
             <span>Combinaciones</span>
           </a>
